// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar renders correctly when connected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] CHATLIST                        [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when connecting 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connecting...] CHATLIST                    [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when disconnected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Disconnected] CHATLIST                     [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders with different focused panels 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] MESSAGES                            [←: Chats] [Enter: Type] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
